# WebTrafficAnalysis

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
preprocessing/: data_parser.py
traffic_monitor/: app.py
traffic_monitor/modules/: log_simulator.py  styles.py  utils.py
traffic_monitor/server/: ml_server.py
traffic_monitor/views/: dashboard.py  settings.py  tracer.py
